--- a/section3/js_sandbox/index.html
+++ b/section3/js_sandbox/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Section 3 dom manipulation & events</h1>
+    <a href="#" class="222">123</a>
+    <a href="#" class="111">223</a>
     <script src="app.js"></script>
 </body>
 </html>
