single element selectors

--- a/section3/js_sandbox/index.html
+++ b/section3/js_sandbox/index.html
@@ -8,8 +8,12 @@
 </head>
 <body>
     <h1>Section 3 dom manipulation & events</h1>
-    <a href="#" class="222">123</a>
-    <a href="#" class="111">223</a>
+    <ul>
+    <li><a href="#" class="classlink" id="classlink1">classlink1</a></li>
+    <li><a href="#" class="classlink" id="classlink2">classlink2</a></li>
+    <li><a href="#" class="classlink" id="classlink3">classlink3</a></li>
+</ul>
+    
     <script src="app.js"></script>
 </body>
 </html>
