multiple selector querys

--- a/section3/js_sandbox/index.html
+++ b/section3/js_sandbox/index.html
@@ -8,12 +8,15 @@
 </head>
 <body>
     <h1>Section 3 dom manipulation & events</h1>
-    <ul>
+<ul class="navlist">
     <li><a href="#" class="classlink" id="classlink1">classlink1</a></li>
     <li><a href="#" class="classlink" id="classlink2">classlink2</a></li>
     <li><a href="#" class="classlink" id="classlink3">classlink3</a></li>
 </ul>
-    
+<table>
+<th>header</th>
+<td class="classlink">tekst</td>
+</table>
     <script src="app.js"></script>
 </body>
 </html>
