Dom Traversing les 25

--- a/section3/js_sandbox/index.html
+++ b/section3/js_sandbox/index.html
@@ -8,11 +8,16 @@
 </head>
 <body>
     <h1>Section 3 dom manipulation & events</h1>
+    <div class="dicvlassouter">
+    <div class="divclass">
 <ul class="navlist">
-    <li><a href="#" class="classlink" id="classlink1">classlink1</a></li>
-    <li><a href="#" class="classlink" id="classlink2">classlink2</a></li>
-    <li><a href="#" class="classlink" id="classlink3">classlink3</a></li>
+    <li class="liclass"><a href="#" class="classlink" id="classlink1">classlink1</a></li>
+    <li class="liclass"><a href="#" class="classlink" id="classlink2">classlink2</a></li>
+    <li class="liclass"><a href="#" class="classlink" id="classlink3">classlink3</a></li>
 </ul>
+</div>
+</div
+
 <table>
 <th>header</th>
 <td class="classlink">tekst</td>
