remove en replace elements

--- a/section3/js_sandbox/index.html
+++ b/section3/js_sandbox/index.html
@@ -7,9 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Section 3 dom manipulation & events</h1>
+    <div class="MainSection">
+    <h1 id="MainTitle">Section 3 dom manipulation & events</h1>
+</div>
     <div class="dicvlassouter">
-    <div class="divclass">
+    <div class="divclass">        
 <ul class="navlist">
     <li class="liclass"><a href="#" class="classlink" id="classlink1">classlink1</a></li>
     <li class="liclass"><a href="#" class="classlink" id="classlink2">classlink2</a></li>
