Finished lesson 28 event listeners

--- a/section3/js_sandbox/index.html
+++ b/section3/js_sandbox/index.html
@@ -17,6 +17,7 @@
     <li class="liclass"><a href="#" class="classlink" id="classlink2">classlink2</a></li>
     <li class="liclass"><a href="#" class="classlink" id="classlink3">classlink3</a></li>
 </ul>
+<button type="button" class="btn btn-primary">Primary button</button>
 </div>
 </div
 
