--- a/section3/js_sandbox/index.html
+++ b/section3/js_sandbox/index.html
@@ -4,27 +4,94 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+      crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
-    <div class="MainSection">
-    <h1 id="MainTitle">Section 3 dom manipulation & events</h1>
-</div>
-    <div class="dicvlassouter">
-    <div class="divclass">        
-<ul class="navlist">
-    <li class="liclass"><a href="#" class="classlink" id="classlink1">classlink1</a></li>
-    <li class="liclass"><a href="#" class="classlink" id="classlink2">classlink2</a></li>
-    <li class="liclass"><a href="#" class="classlink" id="classlink3">classlink3</a></li>
-</ul>
-<button type="button" class="btn btn-primary">Primary button</button>
-</div>
-</div
-
 <table>
 <th>header</th>
 <td class="classlink">tekst</td>
 </table>
-    <script src="app.js"></script>
+<div class="container">
+    <div class="row">
+      <div class="col s12">
+        <div id="main" class="card">
+          <div class="card-content">
+            <span class="card-title">Task List</span>
+            <div class="row">
+              <form id="task-form">
+                <div class="input-field col s12">
+                  <input type="text" name="task" id="task" value="Walk the dog">
+                  <label for="task">New Task</label>
+                </div>
+            </div>
+            <input type="submit" value="Add Task" class="btn">
+            </form>
+          </div>
+          <div class="card-action">
+            <h5 id="task-title">Tasks</h5>
+            <ul class="collection">
+              <li class="collection-item">
+                List Item
+                <a href="#" class="delete-item secondary-content">
+                  <i class="fa fa-remove"></i>
+                </a>
+              </li> 
+              <li class="collection-item">
+                List Item
+                <a href="#" class="delete-item secondary-content">
+                  <i class="fa fa-remove"></i>
+                </a>
+              </li> 
+              <li class="collection-item">
+                List Item
+                <a href="#" class="delete-item secondary-content">
+                  <i class="fa fa-remove"></i>
+                </a>
+              </li>
+              <li class="collection-item">
+                List Item
+                <a href="#" class="delete-item secondary-content">
+                  <i class="fa fa-remove"></i>
+                </a>
+              </li>
+              <li class="collection-item">
+                List Item
+                <a href="#" class="delete-item secondary-content">
+                  <i class="fa fa-remove"></i>
+                </a>
+              </li>
+            </ul>
+            <a class="clear-tasks btn black" href="#">Clear Tasks</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  <div class="container">
+        <div class="MainSection">
+        <h1 id="MainTitle">Tm opdracht 28 gebeurt hierSection 3 dom manipulation & events</h1>
+    </div>
+        <div class="dicvlassouter">
+        <div class="divclass">        
+    <ul class="navlist">
+        <li class="liclass"><a href="#" class="classlink" id="classlink1">classlink1</a></li>
+        <li class="liclass"><a href="#" class="classlink" id="classlink2">classlink2</a></li>
+        <li class="liclass"><a href="#" class="classlink" id="classlink3">classlink3</a></li>
+    </ul>
+    <button type="button" class="btn btn-primary">Clear button</button>
+    <button type="button" class="btn btn-secondary">Add button</button>
+    
+    </div>
+    </div
+    </div> 
+  <script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
