--- a/section3/js_sandbox/index.html
+++ b/section3/js_sandbox/index.html
@@ -57,7 +57,7 @@
               </li>
               <li class="collection-item">
                 List Item
-                <a href="#" class="delete-item secondary-content">
+                <a href="#" class="test delete-item secondary-content">
                   <i class="fa fa-remove"></i>
                 </a>
               </li>
