--- a/section9/84 reg exp/index.html
+++ b/section9/84 reg exp/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h2>Hello</h2>
+    <h3>Reg exp p2</h3>
     <script src="app.js"></script>
   </body>
 </html>
