--- a/section11/96 Singleton/index.html
+++ b/section11/96 Singleton/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Singleton pattern</title>
+    <title>Singleton pattern</title>
   </head>
   <body>
     <h2>Hello</h2>
