--- a/section11/Tracalorie Project/index.html
+++ b/section11/Tracalorie Project/index.html
@@ -48,13 +48,13 @@
       <!-- Item List -->
       <ul id="item-list" class="collection">
         <!-- <li class="collection-item" id="item-0">
-          <strong>Steak: </strong><em>500 calories</em><a href="#" class="secondary-content"><i class="fa fa-pencil"></i> </a>
+          <strong>Steak: </strong><em>500 calories</em><a href="#" class="secondary-content"><i class="edit-item fa fa-pencil"></i> </a>
         </li>
         <li class="collection-item" id="item-0">
-          <strong>Steak: </strong><em>500 calories</em><a href="#" class="secondary-content"><i class="fa fa-pencil"></i> </a>
+          <strong>Steak: </strong><em>500 calories</em><a href="#" class="secondary-content"><i class="edit-item fa fa-pencil"></i> </a>
         </li>
         <li class="collection-item" id="item-0">
-          <strong>Steak: </strong><em>500 calories</em><a href="#" class="secondary-content"><i class="fa fa-pencil"></i> </a>
+          <strong>Steak: </strong><em>500 calories</em><a href="#" class="secondary-content"><i class="edit-item fa fa-pencil"></i> </a>
         </li> -->
       </ul>
     </div>
